Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79147

Windows: QColorDialog displays at wrong position when reshowing after closing via title bar

XMLWordPrintable

    • 7f5d41e286e043c5f3061e2eb5a0128102a38c80 (qt/qtbase/dev) ab1d5fddd3624faabcd20d3facf93054b398a010 (qt/tqtc-qtbase/tqtc/lts-5.15)

      If QColorDialog is shown and it is closed with X button instead of okay/cancel and show() is called again then this time QColorDialog is show at different position, actually it moves up.

      Attached example shows it:
      Run the example and then click "Show color dialog"
      Close color dialog using X
      click show Color Dialog again
      it will now show at different position.

      This works good until Qt5.11.0

        1. qtbug79147_diag.diff
          9 kB
        2. qtbug79147_log.txt
          17 kB
        3. qtbug79147.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes